work in progress

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@hookform/resolvers": "^2.9.10",
     "@lottiefiles/react-lottie-player": "^3.5.0",
     "@mui/material": "^5.11.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
     "react-pro-sidebar": "^1.0.0-alpha.9",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "yup": "^0.32.11"
   },
