--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-spinners": "^0.13.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
