--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.18",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.3.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "nanoid": "^4.0.0",
